<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/btn_group_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_group_2"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:padding="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pick_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/label_pick_contact" />

        <Button
            android:id="@+id/open_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/label_map_open" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_group_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/open_browser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/open_video" />

        <Button
            android:id="@+id/send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/label_send_email" />
    </LinearLayout>


    <TextView
        android:id="@+id/selected_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_group_1"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/selected_contact"
        android:paddingStart="20dp"
        android:textColor="#ff0000" />


</RelativeLayout>